Mejoras Ad/AED y documentación KNN/Clustering

--- a/TFM_MarioSoto/src/codigo/procesamiento_datos/notebooks/AD_&_AED_general.ipynb
+++ b/TFM_MarioSoto/src/codigo/procesamiento_datos/notebooks/AD_&_AED_general.ipynb
@@ -4293,6 +4293,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Splismissing, last_split_seen..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['athlete_id', 'auto_category', 'auto_chip', 'category', 'distance',\n",
+       "       'dorsal', 'event_id', 'gunTime', 'gunTimeMode',\n",
+       "       'gunTimeModeConfig_wave', 'last_split_seen',\n",
+       "       'maxConsecutiveSplitsMissing', 'race_id', 'realStatus', 'splitsMissing',\n",
+       "       'splitsSeen', 'startNetTime', 'startRawTime', 'startTime', 'status',\n",
+       "       'team', 'event_std', 'startNetTime_td', 'startTime_td'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "athletes_events_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TOTAL filas con inconsistencias: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = dfs_final['athletes_events_df'].copy()\n",
+    "\n",
+    "max_splits_map = {\n",
+    "    'maraton': 11,  \n",
+    "    'media': 6      \n",
+    "}\n",
+    "\n",
+    "df['max_splits'] = df['event_std'].map(max_splits_map)\n",
+    "\n",
+    "mask_total_splits = (df['splitsSeen'] + df['splitsMissing']) > df['max_splits']\n",
+    "mask_max_consec = df['maxConsecutiveSplitsMissing'] > df['splitsMissing']\n",
+    "mask_last_split = (df['splitsSeen'] == df['max_splits']) & (df['last_split_seen'] != 'Meta')\n",
+    "\n",
+    "errores = df[mask_total_splits | mask_max_consec | mask_last_split].copy()\n",
+    "\n",
+    "print(f\"TOTAL filas con inconsistencias: {len(errores)}\")\n",
+    "if not errores.empty:\n",
+    "    print(errores[['athlete_id','race_id','event_id',\n",
+    "                   'splitsSeen','splitsMissing','maxConsecutiveSplitsMissing',\n",
+    "                   'max_splits','last_split_seen']].head(20))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Nivel Atleta (Tiempos)"
    ]
   },
